@@ -1,5 +1,8 @@
 #This is a list of changes in pygame's history.
 
+Jan 8, 2001
+	replaces SDL's parachute with smarter python version
+
 Jan 6, 2001
 	added pygame.version module
 
